--- a/conf/sh.rc
+++ b/conf/sh.rc
@@ -6,6 +6,7 @@ alias gl='git log'
 alias gp='git push'
 alias gpf='git push -f'
 alias redocs=redocs
+alias docs='cd /var/www/docs && source venv/bin/activate'
 alias gacm=gacm
 alias gRH=gRH
 
