--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ nav:
     - Fundamentals: school/tiers/unixbasics.md 
     - Nmap: school/tiers/nmap.md
     - OS: school/tiers/os.md
-    - Footprinting: school/tiers/footprinting.md
+    - Services: school/tiers/services.md
   
 
 - DevOps: devops/index.md
